# gan-test

./: pyproject.toml
gan_test/mnist_gan/: discriminators.py  generators.py  mnist_data.py  train.py
